src/index.css
/* ... */
.page-title {
  font-family: 'Bebas Neue';
  font-size: 89px;
  text-align: center;
  color: white;
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 11px rgb(242, 242, 242),
    0 0 19px rgb(237, 237, 237),
    0 0 40px rgb(233, 233, 233),
    0 0 60px rgb(200, 200, 200),
    0 0 80px rgb(166, 166, 166),
    0 0 100px rgb(125, 125, 125),
    0 0 120px rgb(97, 97, 97);
  /* -webkit-animation: fadeIn 8.5s !important;
  -moz-animation: fadeIn 8.5s !important;
  -o-animation: fadeIn 8.5s !important;
  animation: fadeIn 8.5s !important; */
  opacity: 78% !important;
}

#title-glow:hover {
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 11px rgb(242, 242, 242),
    0 0 19px rgb(237, 237, 237),
    0 0 40px rgb(233, 233, 233),
    0 0 60px rgb(200, 200, 200);
}

#social-glow:hover {
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 11px rgb(242, 242, 242),
    0 0 19px rgb(237, 237, 237),
    0 0 40px rgb(233, 233, 233),
    0 0 60px rgb(200, 200, 200);
}

#fadeEffect {
  -webkit-animation: fadeIn 8.5s !important;
  -moz-animation: fadeIn 8.5s !important;
  -o-animation: fadeIn 8.5s !important;
  animation: fadeIn 8.5s !important;
}

.lean-right {
  text-align: right;
  font-size: 20px;
  margin-bottom: 45px;
}

.lean {
  text-align: right !important;
  font-size: 20px;
  margin-bottom: 36px;
}

hr {
  box-sizing: content-box;
  /* 1 */
  height: 0;
  /* 1 */
  overflow: visible;
  /* 2 */
}

ul {
  list-style: none;
  margin-block-start: 0;
  margin-block-end: 0;
  padding-inline-start: 0;
}

nav.navbar {
  position: sticky;
  top: 0px;
  z-index: 1;
  display: block !important;
  opacity: 78% !important;
  /* -webkit-animation: fadeIn 3.25s !important;
  -moz-animation: fadeIn 3.25s !important;
  -o-animation: fadeIn 3.25s !important;
  animation: fadeIn 3.25s !important; */
}

.label {
  cursor: pointer;
  background: rgb(0, 0, 0);
  padding: 0.8rem 1rem;
  width: 18rem;
  display: block !important;
  box-sizing: border-box;
  position: absolute;
  transition: all 0.3s;
  font-family: 'Bebas Neue';
  font-size: 22px;
  color: #ffffff;
  text-decoration: none !important;
}

.items a {
  color: #fff;
  display: flex;
  align-items: center;
  padding: 0.5rem 1rem;
  text-decoration: none !important;
  transition: all 0.2s;
}

.items a:hover {
  background: rgb(37, 37, 37);
  margin-left: -32px;
}

.items {
  background: rgb(0, 0, 0);
  opacity: 0;
  visibility: hidden;
  min-width: 18rem;
  height: 0;
  position: absolute;
  top: 58px;
  transform-origin: top;
  transform: scaleY(0);
  transition: transform 0.3s;
  font-family: 'Bebas Neue';
  font-size: 22px;
  color: #ffffff;
  text-decoration: none !important;
}

.items::before {
  content: "";
  position: absolute;
  width: 15px;
  height: 15px;
  background: rgb(0, 0, 0);
  transform: rotate(45deg);
  top: -7px;
  left: 20px;
  z-index: -1;
}

nav.navbar:hover > .items {
  opacity: 1;
  visibility: visible;
  height: unset;
  transform: scaleY(1);
}

nav.navbar:hover > .label {
  background: rgb(40, 40, 40);
}

.label:hover {
  color: #ffffff;
}
  
pre {
  font-family: monospace, monospace;
  /* 1 */
  font-size: 1em;
  /* 2 */
}
  
a {
  background-color: transparent;
  text-decoration: none !important;
  color: white !important;
}

#colTitle {
  max-width: 14rem;
  margin-top: 3.5%;
  margin-bottom: 2%;
}

#referCol {
  width: 15rem;
  display: block !important;
  margin-top: 3.5%;
  margin-bottom: 2%;
}

#colHeader {
  font-size: 36px;
}

#theWindow {
  overflow: auto;
  display: block !important;
  max-height: 40rem;
  padding-top: 3.5%;
  padding-bottom: 3.5%;
  /* -webkit-animation: fadeIn 8.5s !important;
  -moz-animation: fadeIn 8.5s !important;
  -o-animation: fadeIn 8.5s !important;
  animation: fadeIn 8.5s !important; */
}

p.clientSection {
  font-size: 17px;
  font-style: italic;
  margin-left: 11px;
  margin-bottom: -9px;
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 11px rgb(242, 242, 242),
    0 0 19px rgb(237, 237, 237),
    0 0 40px rgb(233, 233, 233),
    0 0 60px rgb(200, 200, 200);
    display: block !important;
}

.clientsDiv {
  margin: 15px;
}

p.clientName {
  font-size: 19px;
  margin-left: 16px;
  margin-bottom: 3px;
}

p.clientName:hover {
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 8px rgb(242, 242, 242),
    0 0 12px rgb(237, 237, 237),
    0 0 15px rgb(233, 233, 233),
    0 0 19px rgb(200, 200, 200);
}

p.proficiencies {
  font-size: 22px;
  text-align: right;
  margin-left: 16px;
  margin-bottom: 3px;
}

p.proficiencies:hover {
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 8px rgb(242, 242, 242),
    0 0 12px rgb(237, 237, 237),
    0 0 15px rgb(233, 233, 233),
    0 0 19px rgb(200, 200, 200);
}

.imgSpace {
  margin-left: 13.5px;
}
.imgSpaceii {
  margin-left: 11px;
}

#posName {
  font-size: 17px;
  margin-bottom: 3px;
}

#jobTitle {
  font-size: 17px;
  margin-left: 16px;
  margin-bottom: 3px;
}

#expDate {
  font-size: 16px;
  margin-bottom: 3px;
}

#expDateii {
  font-size: 16px;
  margin-bottom: -9px;
}

#coName {
  font-size: 23px;
  margin-bottom: 3px;
}

#coName:hover {
  text-shadow:
    0 0 4px rgb(255, 255, 255),
    0 0 11px rgb(242, 242, 242),
    0 0 17px rgb(237, 237, 237),
    0 0 24px rgb(233, 233, 233),
    0 0 30px rgb(200, 200, 200);
}

#desc {
  font-size: 17px;
  display: block !important;
  margin-top: 6px;
  margin-bottom: 6px;
  white-space: normal;
  text-align: right;
}

#downloadBtn {
  font-family: 'Bebas Neue';
  font-weight: 300px;
  display: block !important;
  margin-bottom: 4px;
  margin-left: -1500px;
  margin-right: -16px;
  text-align: right;
  font-size: 16px;
  opacity: 78% !important;
  /* -webkit-animation: fadeIn 8.5s !important;
  -moz-animation: fadeIn 8.5s !important;
  -o-animation: fadeIn 8.5s !important;
  animation: fadeIn 8.5s !important; */
}
/* ... */

